	PR binutils/12720 	Revert the following change 	Michael Snyder  <msnyder@vmware.com> 	* ar.c (move_members): Plug memory leak. 	(delete_members): Plug memory leak.